# kids_ai_game

./: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  CLAUDE_API_SETUP.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  kaykit_props_list.txt  map-viewer.html  monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/agents/: codebase-analyzer.md  codebase-researcher.md  implementer.md  plan-architect.md  reviewer.md
.claude/commands/: brainstorm.md  conductor.md  create-plan.md  implement-plan.md  pre-demo.md  research.md  start-day.md  test-prompt.md  validate-plan.md
.claude/hooks/: post_compact_recall.sh  session_start_recall.sh  stop_remember_nudge.sh
.claude/memory/: _index.md
.claude/memory/bugs/: test-assertion-mismatches.md
.claude/memory/context/: _index.md  asset-pack-locations.md
.claude/memory/decisions/: _index.md  asset-sourcing-strategy.md
.claude/memory/plans/: 2026-02-10-brand-design-implementation.md  accelerated-roadmap.md
.claude/memory/research/: _index.md  asset-library.md  project-state-assessment.md  vocabulary-contract.md
.claude/memory/sessions/: _index.md  (+3 more)
.claude/plans/: hub-world-wasd-movement.md  visual-regression-issues.md  visual-regression-plan.md
.github/workflows/: ci.yml
docs/: asset-inventory.md  world-layout-map.md
frontend/: .env.example  .gitignore  QUICKSTART.md  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx  test-scale.tsx
helm/app/: Chart.yaml  values.yaml
scripts/: backup_database.sh  install-hooks.sh  setup.sh
scripts/hooks/: commit-msg
sql/: deploy.sql
sql/00_extensions/: extensions.sql
sql/01_core/: 01_tables.sql  02_functions.sql  03_indexes.sql
sql/migrations/: V001__initial.sql  _template.sql
src/api/: app.py  auth.py  auth_middleware.py  db.py  deps.py  main.py  rate_limit.py  schemas.py
src/cli/: __init__.py  ctl.py
src/config/: config.py  logging_config.py
src/sdk/: __init__.py  client.py  exceptions.py  models.py
src/services/: __init__.py  claude_service.py  items_service.py
src/tests/: __init__.py  conftest.py  test_api_items.py  test_auth.py  test_base_worker.py  test_config.py  test_connection_pool.py  test_rate_limiting.py
src/utils/: __init__.py  backoff.py  health_server.py
src/workers/: __init__.py  base_worker.py  example_worker.py
(+76 files in other folders)
